<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Liker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright">Copyright \u00A9 %1$d Likeopedia, LLC</string>
    <string name="otp_string">A verification code has been sent to the email address associated with your account. Please type the code to reset your password</string>
    <string name="no_internet">No Internet</string>
    <string name="facebook_app_id">1470061779929464</string>
    <string name="fb_login_protocol_scheme">fb1470061779929464</string>
    <string name="retry">RETRY</string>
    <string name="ui_fist_name">First Name Empty</string>
    <string name="btn_resend">RESEND</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">ko3F8utVGev4bn7v5YS554zIU</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">PJUCYZZEZadnljLo8OQ22ApwG24QZx0wsbXqSnUUFBlAjHmkBY</string>
    <string name="otp_string_signup">A verification code has been sent to the email address associated with your account.Please type the code to Sign up your Account</string>
    <string name="action_how_to_use_liker">How to use Liker</string>
    <string name="action_account_setting">Account Settings</string>
    <string name="action_find_friends">Find Followers Only</string>
    <string name="action_privacy_security">Privacy &amp; Security</string>
    <string name="action_notification_settings">Notification Settings</string>
    <string name="action_contributor_settings">Contributor Settings</string>
    <string name="action_create_group">Groups</string>
    <string name="action_log_out">Log Out</string>
    <string name="text_alcohol">Alcohol</string>
    <string name="text_coffee">Coffee</string>
    <string name="text_pasta">Pasta</string>
    <string name="text_cold_drinks">Cold Drinks</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="tvLikeCount"><u>10</u></string>
    <string name="search_hint">Search</string>
    <string name="grant">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="gallery_granted">Gallery granted</string>
    <string name="request_permission">You must grant permission!</string>
    <string name="insert_url">Insert a text containing an url</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="preview_area">Preview Area</string>
    <string name="post_area">Post Area</string>
    <string name="no_urls">No urls has been found</string>
    <string name="failed_preview">Preview failed.\nClick to dismiss.</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="random">Random</string>
    <string name="post">Post</string>
    <string name="previous">←</string>
    <string name="forward">→</string>
    <string name="choose_thumbnail">Choose a thumbnail</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="enter_title">Enter a title</string>
    <string name="enter_description">Enter a description</string>
    <string name="of">of</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_post">New Post</string>
    <string name="notifications">Notifications</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="star_contributors">Star Contributors</string>
    <string name="loading">Loading…</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="stars">Stars</string>
    <string name="star">Star</string>
    <string name="search_messages">Search Messages</string>
    <string name="search_category_">Search Category…</string>
    <string name="search_categories_">Search Categories…</string>
    <string name="to">To</string>
    <string name="today">Today</string>
    <string name="few_second_ago">A few seconds</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="done">done</string>
    <string name="personalize_your_feed">Personalize your feed</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_category">Select Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_message">Message</string>
    <string name="title_messaging">Messaging</string>
    <string name="title_new_message">New Message</string>
    <string name="share_as_a_post">Share as a Post</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="copy_link">Copy Link</string>
    <string name="publics">Public</string>
    <string name="friends">Friends</string>
    <string name="only_me">Only Me</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report_comment">Report Comment</string>
    <string name="block_user">Block User</string>
    <string name="photos">photos</string>
    <string name="uploading">Uploading…</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="capture_profile_picture">Capture Profile Picture</string>
    <string name="select_cover_picture">Select Cover Picture</string>
    <string name="capture_cover_picture">Capture Cover Picture</string>
    <string name="select_year">Select Year</string>
    <string name="select_day">Select Day</string>
    <string name="are_you_sure">Are you sure you want to remove</string>
    <string name="search_by_name">Search By Name</string>
    <string name="dont_have_a_liker_account">Don\'t have a Liker account? Sign up</string>
    <string name="who_can_send_you_friend_requests">Who can send you followers Only requests:</string>
    <string name="who_can_post_on_your_wall">Who can post on your wall:</string>
    <string name="who_can_see_your_friends_list">Who can see your followers only list:</string>
    <string name="who_can_see_your_photos">Who can see your photos:</string>
    <string name="who_can_send_you_message">Who can send you message:</string>
    <string name="block_users">Block Users:</string>
    <string name="block">Block</string>
    <string name="reset">Reset</string>
    <string name="deactivate">Deactivate</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="change_all">Change All</string>
    <string name="there_are_no_more_posts">There are no more posts.</string>
    <string name="people_liked_this_post">liked this post</string>
    <string name="people_liked_this_comment">liked this comment</string>
    <string name="people_liked_this_reply">liked this reply</string>
    <string name="people">people</string>
    <string name="person">person</string>
    <string name="all_categories">All Categories</string>
    <string name="sites_and_social_links">Edit Sites &amp; Social Links</string>
    <string name="certifications">Edit Certifications</string>
    <string name="honors_and_awards">Edit Honors &amp; Awards</string>
    <string name="experience">Edit Experience</string>
    <string name="education">Edit Education</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="the_trending_feed_includes_the_hottest_posts">The Trending Feed includes the hottest posts in all of Liker, starting with the ones with the most likes in the past 24 hours.</string>
    <string name="the_breaking_feed_includes_the_newest_posts">The Breaking Feed includes the newest posts in all of Liker, starting with the most recent.</string>
    <string name="the_following_feed_includes_the_most_recent_posts">The following feed includes the most recent posts by your friends and those you are following, starting with the most recent.</string>
    <string name="take_control_of_your_feeds">Take control of your feeds by choosing as many of your favorite categories as you want. Give it a go!</string>
    <string name="use_this_dropdown_to_quick_switch_back">Use this dropdown to quickly switch back and forth between all categories and your custom categories.</string>
    <string name="please_like_posts_that_you_consider_to_be_of_high_quality">Please “like” posts that you consider to be of high quality. Liker tracks “likes” in order to rank the most popular posts and contributors in each category.</string>
    <string name="please_like_comments_that_you_think_are_smart">Please “like” comments that you think are smart, thoughtful, relevant, funny, etc. On Liker, commenters with the most likes earn Top Commenter Badges.</string>
    <string name="since_liker_is_the_smarter_social_network">Since Liker is the SMARTER social network, posts that have a good, insightful post description are more likely to get Likes from other users.</string>
    <string name="you_must_select_an_audience_for_each_post">You must select an audience for each post. You can choose a main category or click on the dropdown to choose a subcategory.</string>
    <string name="the_star_contributors_tab_ranks">The Star Contributors tab ranks the most popular expert contributors in all of Liker.</string>
    <string name="ok_i_got_it">OK, I got it</string>
    <string name="licence">Licence</string>
    <string name="gpa_">GPA-</string>
    <string name="not_yet">Not yet</string>
    <string name="certification">Certification</string>
    <string name="link">Link</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post? You will permanently lose this post !</string>
    <string name="your_internet_connection_might_not_be_working_at_the_moment">Your Internet connection might not be working at the moment. Please check and try again.</string>
    <string name="share_successful">Share successful</string>
    <string name="share_cancel">Share has canceled</string>
    <string name="privacy_updated">Privacy Updated</string>
    <string name="network_error">Network Error</string>
    <string name="advance_search">Advance Search</string>
    <string name="group_content">Groups</string>
    <string name="save_all">Save All</string>
    <string name="notifications_on_off_list">Notifications On Off List</string>
    <string name="notification_name">Notification Name</string>
    <string name="push">Push</string>
    <string name="email">Email</string>
    <string name="browser">Browser</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="camera">Take a photo</string>
    <string name="video">Browse videos</string>
    <string name="photo">Browse photos</string>
    <string name="video_record">Take a video </string>
    <string name="feeling_activity_sticker">Feeling/Activity/Sticker</string>
    <string name="download_image">Download photo</string>
    <string name="open_tab">Open in new tab</string>
    <string name="copy_image">Copy image url</string>
</resources>