<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/photoContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_image_black_24dp"
                android:tint="@color/colorThemeBlue" />
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/photo"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/videoContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_video_library_black_24dp"
                android:tint="@color/colorThemeBlue" />
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:text="@string/video"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cameraContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:tint="@color/colorThemeBlue" />
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/camera"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/videoRecordContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageVideoRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_videocam_black_24dp"
                android:tint="@color/colorThemeBlue" />
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_record"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/emojiContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/main_activity_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tint="@color/colorThemeBlue"
                app:srcCompat="@drawable/emoji_twitter_category_smileysandpeople" />
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/feeling_activity_sticker"
                android:textColor="@android:color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/editContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_mode_edit_black_only_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/deleteContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/notificationContainer"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageNotification"
                android:src="@drawable/ic_notifications_off_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNotificationTitle"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Turn off notifications"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>